# Object-Oriented-Programming

./: .gitignore  README.md
hw0/: CMakeLists.txt  README.md  makefile_manually
hw0/src/: CMakeLists.txt
hw0/test/: CMakeLists.txt
hw1/: .gitignore  CMakeLists.txt  README.md
hw1/tests/: ut_string.cpp
hw2/src/: point.h  point_function.cpp  point_function.h
hw2/tests/: ut_point_function.cpp
hw3/: CMakeLists.txt  README.md
hw3/src/: point.cpp  point.h  triangle.cpp  triangle.h
hw3/tests/: ut_point.cpp  ut_triangle.cpp
hw4/: CMakeLists.txt  README.md
hw4/src/: book.cpp  ebook.h  library_item.cpp  library_management_system.cpp  library_management_system.h  reference_book.h
hw4/tests/: ut_library.cpp  ut_library_item.cpp
hw5/: README.md
hw5/src/: book.h  ebook.cpp  library_item.h  library_management_system.cpp  library_management_system.h  reference_book.cpp
hw5/tests/: ut_book.cpp  ut_ebook.cpp  ut_file_io.cpp  ut_reference_book.cpp
hw6/: .gitignore  CMakeLists.txt  README.md
hw6/src/: circle.cpp  circle.h  convex_polygon.cpp  convex_polygon.h  geo_utils.cpp  geo_utils.h  main.cpp  point.cpp  point.h  shape.h  triangle.cpp  triangle.h
hw6/tests/: ut_circle.cpp  ut_convex_polygon.cpp  ut_geo_utils.cpp  ut_triangle.cpp
hw7/: .gitignore  README.md
hw7/src/: bank_account.cpp  bank_account.h  transaction.cpp  transaction.h  utils.h
hw7/tests/: ut_bank_account.cpp  ut_bank_account_rule_of_three.cpp  ut_utils.cpp
hw8/: README.md
hw8/src/: shared_ptr.h
hw8/tests/: ut_shared_ptr.cpp
hw9/: CMakeLists.txt  README.md
hw9/src/: book.cpp  book.h  library_item.cpp  library_item.h  library_management_system.cpp  library_management_system.h  reference_book.cpp  reference_book.h
hw9/tests/: ut_book.cpp  ut_library_item.cpp  ut_library_management_system.cpp  ut_reference_book.cpp
oop2025f-main/: move-semantics.md  readme.md  std-move.md
oop2025f-main/hello/: CMakeLists.txt
oop2025f-main/hello/src/: CMakeLists.txt  generate_greeting.h  hello.cpp
oop2025f-main/hello/test/: CMakeLists.txt  generate_greeting_test.h  test_main.cpp
oop2025f-main/inner_product/: .gitignore  CMakeLists.txt  FEATURES.md
oop2025f-main/inner_product/src/: inner_product.cpp  inner_product.h
oop2025f-main/inner_product/tests/: inner_product_test.cpp
oop2025f-main/shapes/: CMakeLists.txt  FEATURES.md
oop2025f-main/shapes/src/: amoeba.h  circle.cpp  circle.h  compound_shape.cpp  compound_shape.h  convex_polygon.cpp  convex_polygon.h  ext_amoeba.h  save_shape.h  shape.h  triangle.cpp
oop2025f-main/shapes/tests/: shape_test.cpp
oop2025f-main/vector/src/: vector.h
oop2025f-main/vector/test/: ut_main.cpp  vector_test.h
setup_tutorial/: computer_environment_setting.md  gitlab_setup.md  hand_in_assignment_steps.md  jenkins_setup.md
